2009-01-08 - Sean Huber (shuber@huberry.com)
  * Update comments and documentation
  * Update README
  * Add gemspec

2009-01-07 - Sean Huber (shuber@huberry.com)
  * Initial commit
  * Add comments/documentation to the active record related logic
  * Add more attr_encrypted tests
  * Update tests and comments