@@ -2,6 +2,7 @@
   * Update comments and documentation
   * Update README
   * Add gemspec
+  * Add support for data mapper
 
 2009-01-07 - Sean Huber (shuber@huberry.com)
   * Initial commit
